# wagtail-starling

./: README.md  conftest.py  pyproject.toml
src/wagtail_starling/: __init__.py  apps.py  models.py  panels.py  wagtail_hooks.py
src/wagtail_starling/migrations/: 0001_initial.py  0002_analyticssettings.py  0003_alter_category_id.py
src/wagtail_starling/templates/wagtail_starling/: category_index_page.html  tab_translations.html
src/wagtail_starling/templatetags/: analytics_tags.py
tests/: test_analytics_settings.py  test_analytics_template_tags.py
